fix Cors and Token